--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -1,32 +1,2 @@
 <h1>Incorporar nuevo integrante de la familia</h1>
-<%= form_with model:@family do | f | %>
-    <div>
-         <%= f.label :nombre, 'Nombre'%>
-         <%= f.text_field :nombre %>
-    </div>
-    <br>
-    <div>
-         <%= f.label :app, 'Primer Apellido'%>
-         <%= f.text_field :app %>
-    </div>
-    <br>
-    <div>
-         <%= f.label :apm, 'Segundo Apellido'%>
-         <%= f.text_field :apm %>
-    </div>
-    <br>
-    <div>
-         <%= f.label :iquique, '¿Vive en Iquique?'%>
-         <%= f.check_box :iquique %>
-    </div>
-    <br>
-    <div>
-         <%= f.label :santiago, '¿Vive en Santiago?'%>
-         <%= f.check_box :santiago %>
-    </div>
-    <br>
-    <div>
-         <%= f.submit "Guardar"%>
-    </div>
-   
-<% end %>
+<%= render partial:'form', locals: {message: 'Nuevo'} %>
